# oss-repo-template

./: README.md  index.md
labs/: LICENSE
labs/lab-01/: report.md
labs/lab-02/: report.md
labs/lab-03/: report.md
labs/lab-04/: report.md
labs/lab-05/: report.md
labs/lab-05/Step1/: CMakeLists.txt  tutorial.cxx
labs/lab-05/Step3/: MathCMakeLists.txt
labs/lab-05/example/: CMakeLists.txt  Makefile  Makefile2
labs/lab-06/: plot_words.py  report.md  words4.txt  words4_code.py  words5_code.py  words_perm.txt  words_perm_code.py
labs/lab-08/: report.md
labs/lab-09/: report.md
labs/lab-10/: report.md
labs/lab-11/: check2.py  report.md
